fixed screen align

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,6 +1,7 @@
 .footer {
     background-color: var(--container-color);
     border-top: 1px solid rgba(0, 0, 0, 0.1);
+    width: 100vw;
 }
 
 .footer__container {
@@ -32,7 +33,6 @@
     display: flex;
     justify-content: center;
     column-gap: 1.25rem;
-
 }
 
 .footer__social-link {
